error solved & aligned

--- a/styles/style.css
+++ b/styles/style.css
@@ -109,11 +109,11 @@ main section {
     margin: 130px 0;
 }
 
-.section-title {
+/* .section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
-}
+} */
 
 .section-description {
     color: #757575;
